@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2012 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2012-2026 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,23 +38,18 @@ import org.nuxeo.ecm.core.api.Blob;
 import org.nuxeo.ecm.core.api.Blobs;
 import org.nuxeo.ecm.core.api.CoreSession;
 import org.nuxeo.ecm.core.api.DocumentModel;
-import org.nuxeo.ecm.core.test.CoreFeature;
 import org.nuxeo.ecm.core.test.annotations.Granularity;
 import org.nuxeo.ecm.core.test.annotations.RepositoryConfig;
-import org.nuxeo.runtime.test.runner.Deploy;
 import org.nuxeo.runtime.test.runner.Features;
 import org.nuxeo.runtime.test.runner.FeaturesRunner;
 import org.nuxeo.template.api.TemplateProcessorService;
 import org.nuxeo.template.api.adapters.TemplateBasedDocument;
+import org.nuxeo.template.processors.xdocreport.XDocReportFeature;
 import org.nuxeo.template.processors.xdocreport.ZipXmlHelper;
 
 @RunWith(FeaturesRunner.class)
-@Features(CoreFeature.class)
+@Features(XDocReportFeature.class)
 @RepositoryConfig(cleanup = Granularity.METHOD)
-@Deploy("org.nuxeo.ecm.platform.dublincore")
-@Deploy("org.nuxeo.template.manager.api")
-@Deploy("org.nuxeo.template.manager")
-@Deploy("org.nuxeo.template.manager.xdocreport")
 public class TestMultiTemplating {
 
     @Inject
@@ -133,7 +128,7 @@ public class TestMultiTemplating {
         TemplateBasedDocument tbd = testDoc.getAdapter(TemplateBasedDocument.class);
         assertNotNull(tbd);
         assertEquals(1, tbd.getTemplateNames().size());
-        assertEquals("odt", tbd.getTemplateNames().get(0));
+        assertEquals("odt", tbd.getTemplateNames().getFirst());
 
         // check rendition
         Blob rendered = tbd.renderWithTemplate("odt");
@@ -164,7 +159,7 @@ public class TestMultiTemplating {
         testDoc = tps.detachTemplateBasedDocument(testDoc, "odt", true);
         tbd = testDoc.getAdapter(TemplateBasedDocument.class);
         assertEquals(1, tbd.getTemplateNames().size());
-        assertEquals("ftl", tbd.getTemplateNames().get(0));
+        assertEquals("ftl", tbd.getTemplateNames().getFirst());
 
         // unbind ftl
         testDoc = tps.detachTemplateBasedDocument(testDoc, "ftl", true);
