@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2011 Nuxeo SA (http://nuxeo.com/) and others.
+ * (C) Copyright 2011-2026 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -40,7 +40,6 @@ import org.nuxeo.ecm.core.api.Blob;
 import org.nuxeo.ecm.core.api.Blobs;
 import org.nuxeo.ecm.core.api.CoreSession;
 import org.nuxeo.ecm.core.api.DocumentModel;
-import org.nuxeo.ecm.core.test.CoreFeature;
 import org.nuxeo.ecm.core.test.annotations.Granularity;
 import org.nuxeo.ecm.core.test.annotations.RepositoryConfig;
 import org.nuxeo.runtime.test.runner.Deploy;
@@ -52,17 +51,14 @@ import org.nuxeo.template.api.TemplateInput;
 import org.nuxeo.template.api.TemplateProcessorService;
 import org.nuxeo.template.api.adapters.TemplateBasedDocument;
 import org.nuxeo.template.api.adapters.TemplateSourceDocument;
+import org.nuxeo.template.processors.xdocreport.XDocReportFeature;
 import org.nuxeo.template.processors.xdocreport.ZipXmlHelper;
 
 @RunWith(FeaturesRunner.class)
-@Features(CoreFeature.class)
+@Features(XDocReportFeature.class)
 @RepositoryConfig(cleanup = Granularity.METHOD)
 @Deploy("org.nuxeo.ecm.platform.convert")
 @Deploy("org.nuxeo.ecm.platform.preview")
-@Deploy("org.nuxeo.ecm.platform.dublincore")
-@Deploy("org.nuxeo.template.manager.api")
-@Deploy("org.nuxeo.template.manager")
-@Deploy("org.nuxeo.template.manager.xdocreport")
 public class TestProcessingWithFileNote {
 
     @Inject
@@ -134,8 +130,8 @@ public class TestProcessingWithFileNote {
         // System.out.println(params);
         assertEquals(1, params.size());
 
-        params.get(0).setType(InputType.Content);
-        params.get(0).setSource(ContentInputType.HtmlPreview.getValue());
+        params.getFirst().setType(InputType.Content);
+        params.getFirst().setSource(ContentInputType.HtmlPreview.getValue());
 
         templateDoc = source.saveParams(params, true);
 
